--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                         facilisis felis accumsan nec.
                     </p>
                     <div class="container-icons">
-                        <p>X</p>
-                        <p>X</p>
-                        <p>X</p>
+                        <p>X</p><!-- icon -->
+                        <p>X</p><!-- icon -->
+                        <p>X</p><!-- icon -->
                     </div>
                 </div>
                 <div class="container">
@@ -103,9 +103,9 @@
                         purus, dignissim ut sapien in, varius pellentesque lacus.
                     </p>
                     <div class="container-icons">
-                        <p>X</p>
-                        <p>X</p>
-                        <p>X</p>
+                        <p>X</p><!-- icon -->
+                        <p>X</p><!-- icon -->
+                        <p>X</p><!-- icon -->
                     </div>
                 </div>
                 <div class="container">
@@ -115,9 +115,9 @@
                         id.
                     </p>
                     <div class="container-icons">
-                        <p>X</p>
-                        <p>X</p>
-                        <p>X</p>
+                        <p>X</p><!-- icon -->
+                        <p>X</p><!-- icon -->
+                        <p>X</p><!-- icon -->
                     </div>
                 </div>
                 <div class="container">
@@ -127,9 +127,9 @@
                         commodo, ac bibendum magna tincidunt.
                     </p>
                     <div class="container-icons">
-                        <p>X</p>
-                        <p>X</p>
-                        <p>X</p>
+                        <p>X</p><!-- icon -->
+                        <p>X</p><!-- icon -->
+                        <p>X</p><!-- icon -->
                     </div>
                 </div>
                 <div class="container">
@@ -139,9 +139,9 @@
                         hendrerit felis. Aliquam sed malesuada eros.
                     </p>
                     <div class="container-icons">
-                        <p>X</p>
-                        <p>X</p>
-                        <p>X</p>
+                        <p>X</p><!-- icon -->
+                        <p>X</p><!-- icon -->
+                        <p>X</p><!-- icon -->
                     </div>
                 </div>
                 <div class="container">
@@ -152,9 +152,9 @@
                         Pellentesque mollis nec sem vel aliquam
                     </p>
                     <div class="container-icons">
-                        <p>X</p>
-                        <p>X</p>
-                        <p>X</p>
+                        <p>X</p><!-- icon -->
+                        <p>X</p><!-- icon -->
+                        <p>X</p><!-- icon -->
                     </div>
                 </div>
             </div>
@@ -167,7 +167,6 @@
                             in accumsan elit maximus ac. Donec
                             hendreit sodales congue...
                         </p>
-                        <!-- Dash line -->
                     </div>
                     <div class="announcements-section">
                         <h3>Community Share Day</h3>
@@ -175,7 +174,6 @@
                             en, ornare libero. Aliquam dictum
                             accumsan porttitor...
                         </p>
-                        <!-- Dash line -->
                     </div>
                     <div class="announcements-section">
                         <h3>Updated Privacy Policy</h3>
@@ -184,28 +182,27 @@
                             consectetur, eget condimentum ante
                             auctor. Cras fringilla sagittis sem in mattis...
                         </p>
-                        <!-- Dash line -->
                     </div>
                 </div>
                 <h2>Trending</h2>
                 <div class="trending-container">
                     <div class="trending-section">
-                        <p class="trending-avatar">X</p>
+                        <p class="trending-avatar">X</p><!-- avatar -->
                         <p class="trending-tag">@tegan</p>
                         <p class="trending-fullname">World Peace Builder</p>
                     </div>
                     <div class="trending-section">
-                        <p class="trending-avatar">X</p>
+                        <p class="trending-avatar">X</p><!-- avatar -->
                         <p class="trending-tag">@morgan</p>
                         <p class="trending-fullname">Super Cool Project</p>
                     </div>
                     <div class="trending-section">
-                        <p class="trending-avatar">X</p>
+                        <p class="trending-avatar">X</p><!-- avatar -->
                         <p class="trending-tag">@kendall<p>
                         <p class="trending-fullname">Life Changing App</p>
                     </div>
                     <div class="trending-section">
-                        <p class="trending-avatar">X</p>
+                        <p class="trending-avatar">X</p><!-- avatar -->
                         <p class="trending-tag">@alex</p>
                         <p class="trending-fullname">No Traffic Maker</p>
                     </div>
