--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <a class="container-content" href="https://github.com/DimitrijeB-96/odin-recipes" target="_blank">
                         <h2>First project: Recipes</h2>
                         <p>This was introduction project. 
-                            So far I have learned how to use Linux operating system, how to use Git and GitHub and basics in HTML with
+                            So far I have learned how to use Linux operating system, how to use Git and GitHub and basics in HTML.
                         </p>
                         <div class="container-icons">
                             <i class="bi bi-star"></i><!-- star icon -->
@@ -104,9 +104,8 @@
                 <div class="container">
                     <a class="container-content" href="https://github.com/DimitrijeB-96/Landing-Page" target="_blank">
                         <h2>Second project: Landing Page</h2>
-                        <p>Sed tempus ut lacus ut scelerisque.
-                            Suspendisse sollicitudin nibh erat, id
-                            facilisis felis accumsan nec.
+                        <p>For this project main focus was implementing CSS and positioning of content at the page.
+                            For this project positiong was done with flexbox and it's properties.
                         </p>
                         <div class="container-icons">
                             <i class="bi bi-star"></i><!-- star icon -->
@@ -118,9 +117,8 @@
                 <div class="container">
                     <a class="container-content" href="https://github.com/DimitrijeB-96/Project-Rock-Paper-Scissors" target="_blank">
                         <h2>Third project: Rock Paper Scissors</h2>
-                        <p>Sed tempus ut lacus ut scelerisque.
-                            Suspendisse sollicitudin nibh erat, id
-                            facilisis felis accumsan nec.
+                        <p>This was project for introduction in JavaScript.
+                            And later in the course was revisited to add DOM manipulation.
                         </p>
                         <div class="container-icons">
                             <i class="bi bi-star"></i><!-- star icon -->
@@ -132,9 +130,8 @@
                 <div class="container">
                     <a class="container-content" href="https://github.com/DimitrijeB-96/Project-Etch-a-Sketch" target="_blank">
                         <h2>Fourth project: Etch-a-Sketch</h2>
-                        <p>Sed tempus ut lacus ut scelerisque.
-                            Suspendisse sollicitudin nibh erat, id
-                            facilisis felis accumsan nec.
+                        <p>This project was done after revisiting Rock Paper Scissors.
+                            With knowladge of DOM manipulatin and bascis in JavaScript but it wasn't easy.
                         </p>
                         <div class="container-icons">
                             <i class="bi bi-star"></i><!-- star icon -->
@@ -146,9 +143,8 @@
                 <div class="container">
                     <a class="container-content" href="https://github.com/DimitrijeB-96/Project-Calculator" target="_blank">
                         <h2>Fifth project: Calculator</h2>
-                        <p>Sed tempus ut lacus ut scelerisque.
-                            Suspendisse sollicitudin nibh erat, id
-                            facilisis felis accumsan nec.
+                        <p>Last project in Foundation part of curriculum.
+                            Hardest so far, but wort it!
                         </p>
                         <div class="container-icons">
                             <i class="bi bi-star"></i><!-- star icon -->
@@ -160,9 +156,8 @@
                 <div class="container">
                     <a class="container-content" href="https://github.com/DimitrijeB-96/Project-Sign-Up-form" target="_blank">
                         <h2>The Sixth project: Sign-up Form</h2>
-                        <p>Sed tempus ut lacus ut scelerisque.
-                            Suspendisse sollicitudin nibh erat, id
-                            facilisis felis accumsan nec.
+                        <p>First project in Full Stack JavaScript path.
+                            All positioning was done with Flexbox and it is dynamiclly scallable for smaller screen devices.
                         </p>
                         <div class="container-icons">
                             <i class="bi bi-star"></i><!-- star icon -->
