--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
                 <h2>My Odin Projects</h2>
                 <div class="container">
                     <a class="container-content" href="https://github.com/DimitrijeB-96/odin-recipes" target="_blank">
-                        <h2>First project: Recipes</h2>
-                        <p>This was introduction project. 
-                            So far I have learned how to use Linux operating system, how to use Git and GitHub and basics in HTML.
+                        <h2>First project: <span class="content-heading">Recipes</span></h2>
+                        <p>This was introduction project, and before this project focus was at setting up
+                            Ubuntu Linux operating system on VM and some basics on how to use it.
+                            After basics with operating system next focus was at setting up code editor, Git and GitHub.
+                            And finally introduction at HTML and CSS. At this project majority of code is in HTML and just few lines in CSS.
                         </p>
                         <div class="container-icons">
                             <i class="bi bi-star"></i><!-- star icon -->
@@ -103,9 +105,10 @@
                 </div>
                 <div class="container">
                     <a class="container-content" href="https://github.com/DimitrijeB-96/Landing-Page" target="_blank">
-                        <h2>Second project: Landing Page</h2>
-                        <p>For this project main focus was implementing CSS and positioning of content at the page.
-                            For this project positiong was done with flexbox and it's properties.
+                        <h2>Second project: <span class="content-heading">Landing Page</span></h2>
+                        <p>After first project "Recipes", focus was at placement of content at the page.
+                            Differences between Block and Inline box model. Implementation of display Flexbox with it's alignment properties like
+                            growing, shrinking, align and justify.
                         </p>
                         <div class="container-icons">
                             <i class="bi bi-star"></i><!-- star icon -->
@@ -116,9 +119,10 @@
                 </div>
                 <div class="container">
                     <a class="container-content" href="https://github.com/DimitrijeB-96/Project-Rock-Paper-Scissors" target="_blank">
-                        <h2>Third project: Rock Paper Scissors</h2>
-                        <p>This was project for introduction in JavaScript.
-                            And later in the course was revisited to add DOM manipulation.
+                        <h2>Third project: <span class="content-heading">Rock Paper Scissors</span></h2>
+                        <p>This was first project in section JavaScript Basics and this project was done in two parts.
+                            In first part game of Rock Paper Scissors was done in console, while input was at pop-up window.
+                            Second part was revisited after curriculum for DOM manipulation and focus was at getting game played from console to the page.
                         </p>
                         <div class="container-icons">
                             <i class="bi bi-star"></i><!-- star icon -->
@@ -129,9 +133,9 @@
                 </div>
                 <div class="container">
                     <a class="container-content" href="https://github.com/DimitrijeB-96/Project-Etch-a-Sketch" target="_blank">
-                        <h2>Fourth project: Etch-a-Sketch</h2>
-                        <p>This project was done after revisiting Rock Paper Scissors.
-                            With knowladge of DOM manipulatin and bascis in JavaScript but it wasn't easy.
+                        <h2>Fourth project: <span class="content-heading">Etch-a-Sketch</span></h2>
+                        <p>This project was done after revisiting Rock Paper Scissors to implement DOM.
+                            Focus of this project was at implementing everything that I've learned of JavaScript so far.
                         </p>
                         <div class="container-icons">
                             <i class="bi bi-star"></i><!-- star icon -->
@@ -142,9 +146,10 @@
                 </div>
                 <div class="container">
                     <a class="container-content" href="https://github.com/DimitrijeB-96/Project-Calculator" target="_blank">
-                        <h2>Fifth project: Calculator</h2>
-                        <p>Last project in Foundation part of curriculum.
-                            Hardest so far, but wort it!
+                        <h2>Fifth project: <span class="content-heading">Calculator</span></h2>
+                        <p>This was last project from Foundations part of curriculum.
+                            The only new thing for this project was introduction at objects in JavaScript.
+                            This was the hardest project in Foundations if you ask me, but it was wort it!
                         </p>
                         <div class="container-icons">
                             <i class="bi bi-star"></i><!-- star icon -->
@@ -155,9 +160,11 @@
                 </div>
                 <div class="container">
                     <a class="container-content" href="https://github.com/DimitrijeB-96/Project-Sign-Up-form" target="_blank">
-                        <h2>The Sixth project: Sign-up Form</h2>
+                        <h2>The Sixth project: <span class="content-heading">Sign-up Form</span></h2>
                         <p>First project in Full Stack JavaScript path.
-                            All positioning was done with Flexbox and it is dynamiclly scallable for smaller screen devices.
+                            For this project focus was getting more advanced HTML and CSS.
+                            All positioning was done with Flexbox, but I've added dynamic scalling to test my skills since I haven't used 
+                            it before for the previous projects. 
                         </p>
                         <div class="container-icons">
                             <i class="bi bi-star"></i><!-- star icon -->
@@ -203,7 +210,7 @@
                         <a class="visit-section" href="https://github.com/" target="_blank">
                             <img alt="Github-logo" class="visit-avatar" src="images/github-logo.png"><!-- avatar -->
                             <p class="visit-tag">@github</p>
-                            <p class="visit-fullname">Github</p>
+                            <p class="visit-fullname">GitHub</p>
                         </a>
                     </div>
                     <div>
